--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7c83b90a",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,9 @@
     "continuous_data.ffill(inplace=True) # forwards fill missing values\n",
     "\n",
     "continuous_data.reset_index(inplace=True) # Moves 'datetime' back from the index to a regular column\n",
-    "print('data Null/NA Values after fill:', continuous_data.isnull().values.sum())\n"
+    "print('data Null/NA Values after fill:', continuous_data.isnull().values.sum())\n",
+    "\n",
+    "data = continuous_data.copy()"
    ]
   },
   {
@@ -525,11 +527,22 @@
     "first_nonzero_row = data[data['Volume'] > 0].head(1)\n",
     "print(first_nonzero_row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b1341da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save cleaned data to csv file\n",
+    "data.to_csv('./data/cleaned_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Crypto",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
