--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9fa94f67",
    "metadata": {
     "collapsed": true,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "07cde7a1",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2990ce69",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f9fbda39",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File copied successfully.\n"
+      "File already exists. Skipping copy.\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0ae0a870",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8164/1927658998.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_4885/1927658998.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(destination_path)\n"
      ]
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ee1065a7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "4  1.325412e+09  4.58  4.58  4.58   4.58     0.0  2012-01-01 10:05:00+00:00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "6885f6bf",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "140ebc38",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "5031f900",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "11a7fe94",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "97388800",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "9e460264",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "eef1ec19",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7c83b90a",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "2174a46b",
    "metadata": {},
    "outputs": [
@@ -518,8 +518,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Timestamp  Open  High   Low  Close  Volume            datetime\n",
-      "627  1.325450e+09  4.84  4.84  4.84   4.84    10.0 2012-01-01 20:28:00\n"
+      "               datetime     Timestamp  Open  High   Low  Close  Volume\n",
+      "627 2012-01-01 20:28:00  1.325450e+09  4.84  4.84  4.84   4.84    10.0\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5b1341da",
    "metadata": {},
    "outputs": [],
