Refactor and optimize the MOMENT pipeline:
- Change model from "MOMENT-1-large" to "MOMENT-1-small" for efficiency
- Add test DataLoader
- Modify loss function to Huber loss for better training stability
- Increase number of epochs for thorough training

--- a/Sattar (MOMENT)/moment.ipynb
+++ b/Sattar (MOMENT)/moment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "id": "ae5e595b",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "id": "198ffe16",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "id": "80d2a95e",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "4 2012-01-09 21:00:00  1.326143e+09   6.6   6.6  6.6    6.6  5.87485  0.033750"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "id": "99259d63",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "id": "a4ff4627",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "id": "0bdb9061",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "id": "140609d4",
    "metadata": {},
    "outputs": [],
@@ -289,12 +289,13 @@
     "test_ds  = ForecastDataset(test_X,  test_y)\n",
     "\n",
     "train_loader = DataLoader(train_ds, batch_size=16, shuffle=True)\n",
-    "val_loader   = DataLoader(val_ds,   batch_size=16, shuffle=False)"
+    "val_loader   = DataLoader(val_ds,   batch_size=16, shuffle=False)\n",
+    "test_loader  = DataLoader(test_ds,  batch_size=16, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "id": "32ed6597",
    "metadata": {},
    "outputs": [
@@ -313,31 +314,31 @@
        "  (normalizer): RevIN()\n",
        "  (tokenizer): Patching()\n",
        "  (patch_embedding): PatchEmbedding(\n",
-       "    (value_embedding): Linear(in_features=8, out_features=1024, bias=False)\n",
+       "    (value_embedding): Linear(in_features=8, out_features=512, bias=False)\n",
        "    (position_embedding): PositionalEmbedding()\n",
        "    (dropout): Dropout(p=0.1, inplace=False)\n",
        "  )\n",
        "  (encoder): T5Stack(\n",
-       "    (embed_tokens): Embedding(32128, 1024)\n",
+       "    (embed_tokens): Embedding(32128, 512)\n",
        "    (block): ModuleList(\n",
        "      (0): T5Block(\n",
        "        (layer): ModuleList(\n",
        "          (0): T5LayerSelfAttention(\n",
        "            (SelfAttention): T5Attention(\n",
-       "              (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (relative_attention_bias): Embedding(32, 16)\n",
+       "              (q): Linear(in_features=512, out_features=384, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=384, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=384, bias=False)\n",
+       "              (o): Linear(in_features=384, out_features=512, bias=False)\n",
+       "              (relative_attention_bias): Embedding(32, 6)\n",
        "            )\n",
        "            (layer_norm): T5LayerNorm()\n",
        "            (dropout): Dropout(p=0.1, inplace=False)\n",
        "          )\n",
        "          (1): T5LayerFF(\n",
        "            (DenseReluDense): T5DenseGatedActDense(\n",
-       "              (wi_0): Linear(in_features=1024, out_features=2816, bias=False)\n",
-       "              (wi_1): Linear(in_features=1024, out_features=2816, bias=False)\n",
-       "              (wo): Linear(in_features=2816, out_features=1024, bias=False)\n",
+       "              (wi_0): Linear(in_features=512, out_features=1024, bias=False)\n",
+       "              (wi_1): Linear(in_features=512, out_features=1024, bias=False)\n",
+       "              (wo): Linear(in_features=1024, out_features=512, bias=False)\n",
        "              (dropout): Dropout(p=0.1, inplace=False)\n",
        "              (act): NewGELUActivation()\n",
        "            )\n",
@@ -346,23 +347,23 @@
        "          )\n",
        "        )\n",
        "      )\n",
-       "      (1-23): 23 x T5Block(\n",
+       "      (1-7): 7 x T5Block(\n",
        "        (layer): ModuleList(\n",
        "          (0): T5LayerSelfAttention(\n",
        "            (SelfAttention): T5Attention(\n",
-       "              (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
-       "              (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+       "              (q): Linear(in_features=512, out_features=384, bias=False)\n",
+       "              (k): Linear(in_features=512, out_features=384, bias=False)\n",
+       "              (v): Linear(in_features=512, out_features=384, bias=False)\n",
+       "              (o): Linear(in_features=384, out_features=512, bias=False)\n",
        "            )\n",
        "            (layer_norm): T5LayerNorm()\n",
        "            (dropout): Dropout(p=0.1, inplace=False)\n",
        "          )\n",
        "          (1): T5LayerFF(\n",
        "            (DenseReluDense): T5DenseGatedActDense(\n",
-       "              (wi_0): Linear(in_features=1024, out_features=2816, bias=False)\n",
-       "              (wi_1): Linear(in_features=1024, out_features=2816, bias=False)\n",
-       "              (wo): Linear(in_features=2816, out_features=1024, bias=False)\n",
+       "              (wi_0): Linear(in_features=512, out_features=1024, bias=False)\n",
+       "              (wi_1): Linear(in_features=512, out_features=1024, bias=False)\n",
+       "              (wo): Linear(in_features=1024, out_features=512, bias=False)\n",
        "              (dropout): Dropout(p=0.1, inplace=False)\n",
        "              (act): NewGELUActivation()\n",
        "            )\n",
@@ -378,12 +379,12 @@
        "  (head): ForecastingHead(\n",
        "    (flatten): Flatten(start_dim=-2, end_dim=-1)\n",
        "    (dropout): Dropout(p=0.1, inplace=False)\n",
-       "    (linear): Linear(in_features=65536, out_features=360, bias=True)\n",
+       "    (linear): Linear(in_features=32768, out_features=360, bias=True)\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +393,7 @@
     "\n",
     "# Load MOMENT pipeline for forecasting\n",
     "model = MOMENTPipeline.from_pretrained(\n",
-    "    \"AutonLab/MOMENT-1-large\",\n",
+    "    \"AutonLab/MOMENT-1-small\",\n",
     "    model_kwargs={\n",
     "        'task_name': 'forecasting',\n",
     "        'forecast_horizon': horizon,\n",
@@ -412,12 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 90,
    "id": "2c6622f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs = 5 \n",
+    "num_epochs = 50\n",
     "\n",
     "# Loss functions\n",
     "mse_loss_fn = nn.MSELoss()\n",
@@ -426,7 +427,7 @@
     "huber_loss_fn.to(device)\n",
     "\n",
     "# Optimizer\n",
-    "optimizer = optim.AdamW(model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
     "\n",
     "# Metrics\n",
     "metric_mse = MeanSquaredError().to(device)\n",
@@ -444,7 +445,18 @@
    "execution_count": null,
    "id": "52a99c31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\4310129\\AppData\\Local\\anaconda3\\envs\\AI417-DL\\lib\\site-packages\\torch\\_dynamo\\eval_frame.py:632: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n",
+      "c:\\Users\\4310129\\AppData\\Local\\anaconda3\\envs\\AI417-DL\\lib\\site-packages\\torch\\utils\\checkpoint.py:87: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Training loop\n",
     "for epoch in range(num_epochs):\n",
@@ -459,12 +471,12 @@
     "        output = model(x_enc=series, input_mask=mask)  # forward pass # shape [B, 360] from forecasting head\n",
     "        # print(output.forecast.shape, target.shape)\n",
     "        # loss = mse_loss_fn(output.forecast, target)\n",
-    "        loss = mse_loss_fn(output.forecast[:, 3, :], target)\n",
+    "        loss = huber_loss_fn(output.forecast[:, 3, :], target)\n",
     "        loss.backward()\n",
     "\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_grad_norm)\n",
+    "        # torch.nn.utils.clip_grad_norm_(model.parameters(), max_grad_norm)\n",
     "        optimizer.step()\n",
-    "        scheduler.step()\n",
+    "        # scheduler.step()\n",
     "        \n",
     "        train_losses.append(loss.item())\n",
     "    avg_train_loss = np.mean(train_losses)\n",
@@ -479,15 +491,16 @@
     "            mask   = mask.to(device)       # (batch, L)\n",
     "\n",
     "            output = model(x_enc=series, input_mask=mask)\n",
-    "            val_loss = mse_loss_fn(output.forecast[:, 3, :], target)\n",
+    "            val_loss = huber_loss_fn(output.forecast[:, 3, :], target)\n",
     "            val_losses.append(val_loss.item())\n",
-    "            metric_mse(output.forecast[:, 3, :], target)\n",
-    "            metric_mae(output.forecast[:, 3, :], target) \n",
+    "            preds = output.forecast[:, 3, :].contiguous()\n",
+    "            metric_mse(preds, target)\n",
+    "            metric_mae(preds, target)\n",
     "    avg_val_loss = np.mean(val_losses)\n",
     "    val_mse = metric_mse.compute().item()\n",
     "    val_mae = metric_mae.compute().item()\n",
     "\n",
-    "    print(f\"Epoch {epoch+1} | Train MSE {avg_train_loss:.4f} | Val MSE {val_mse:.4f}, Val MAE {val_mae:.4f}\")"
+    "    print(f\"Epoch {epoch+1} | Train Loss {avg_train_loss:.4f} | Val Loss {avg_val_loss:.4f}  | Val MSE {val_mse:.4f}, Val MAE {val_mae:.4f}\")"
    ]
   },
   {
@@ -495,26 +508,44 @@
    "execution_count": null,
    "id": "b01c0a92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MSE: 25419528.0000, Test MAE: 3614.6968, Test Huber: 3615.6266\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "test_losses = []\n",
     "metric_mse.reset(); metric_mae.reset()\n",
     "with torch.no_grad():\n",
-    "    for batch_X, batch_y in DataLoader(test_ds, batch_size=16):\n",
-    "        batch_X = batch_X.to(device)\n",
-    "        batch_y = batch_y.to(device)\n",
-    "        outputs = model(batch_X)\n",
-    "        metric_mse(outputs, batch_y)\n",
-    "        metric_mae(outputs, batch_y)\n",
+    "    for series, target, mask in test_loader:\n",
+    "        series, target, mask = series.to(device), target.to(device), mask.to(device)\n",
+    "        output = model(x_enc=series, input_mask=mask)\n",
+    "\n",
+    "        preds = output.forecast[:, 3, :].contiguous()\n",
+    "        metric_mse(preds, target)\n",
+    "        metric_mae(preds, target)\n",
+    "\n",
     "        # For reporting Huber:\n",
-    "        test_losses.append(huber_loss_fn(outputs, batch_y).item())\n",
+    "        test_losses.append(huber_loss_fn(output.forecast[:, 3, :], target).item())\n",
     "test_mse = metric_mse.compute().item()\n",
     "test_mae = metric_mae.compute().item()\n",
     "test_huber = np.mean(test_losses)\n",
     "\n",
     "print(f\"Test MSE: {test_mse:.4f}, Test MAE: {test_mae:.4f}, Test Huber: {test_huber:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e95a409f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
