Add preprocessing PDF and save cleaned data to CSV in cleaning notebook
- Updated `cleaning.ipynb` to include code for saving the cleaned data to a CSV file (`preprocessed_hourly_data.csv`) in the `./data/` directory.

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -1141,6 +1141,17 @@
     "data = engineered_data.reset_index() # reset the index so that we can use it as a column  \n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "81bf963f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save cleaned data to csv file\n",
+    "data.to_csv('./data/preprocessed_hourly_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
